[gd_scene load_steps=2 format=3 uid="uid://dwd8ug3siqd4q"]

[ext_resource type="Script" path="res://control_(root).gd" id="1_gddro"]

[node name="Control (root)" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0042, 1)
script = ExtResource("1_gddro")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 755.0
offset_bottom = 401.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Remaining points" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Remaining points"

[node name="Value points" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label str" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Strength"

[node name="HBoxContainer (str)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value str" type="SpinBox" parent="VBoxContainer/HBoxContainer (str)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider str" type="HSlider" parent="VBoxContainer/HBoxContainer (str)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label dex" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dexterity"

[node name="HBoxContainer (dex)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value dex" type="SpinBox" parent="VBoxContainer/HBoxContainer (dex)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider dex" type="HSlider" parent="VBoxContainer/HBoxContainer (dex)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label int" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Intelligence"

[node name="HBoxContainer (int)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value int" type="SpinBox" parent="VBoxContainer/HBoxContainer (int)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider int" type="HSlider" parent="VBoxContainer/HBoxContainer (int)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label luck" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Luck"

[node name="HBoxContainer (luck)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value luck" type="SpinBox" parent="VBoxContainer/HBoxContainer (luck)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider luck" type="HSlider" parent="VBoxContainer/HBoxContainer (luck)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label char" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Charisma"

[node name="HBoxContainer (char)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value char" type="SpinBox" parent="VBoxContainer/HBoxContainer (char)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider char" type="HSlider" parent="VBoxContainer/HBoxContainer (char)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label wis" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wisdom"

[node name="HBoxContainer (wis)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value wis" type="SpinBox" parent="VBoxContainer/HBoxContainer (wis)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider wis" type="HSlider" parent="VBoxContainer/HBoxContainer (wis)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[node name="Label con" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Constitution
"

[node name="HBoxContainer (con)" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Value con" type="SpinBox" parent="VBoxContainer/HBoxContainer (con)"]
layout_mode = 2
max_value = 30.0

[node name="HSlider con" type="HSlider" parent="VBoxContainer/HBoxContainer (con)"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 30.0

[connection signal="value_changed" from="VBoxContainer/HBoxContainer (str)/Value str" to="." method="_on_value_str_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (str)/HSlider str" to="." method="_on_h_slider_str_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (dex)/Value dex" to="." method="_on_value_dex_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (dex)/HSlider dex" to="." method="_on_h_slider_dex_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (int)/Value int" to="." method="_on_value_int_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (int)/HSlider int" to="." method="_on_h_slider_int_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (luck)/Value luck" to="." method="_on_value_luck_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (luck)/HSlider luck" to="." method="_on_h_slider_luck_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (char)/Value char" to="." method="_on_value_char_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (char)/HSlider char" to="." method="_on_h_slider_char_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (wis)/Value wis" to="." method="_on_value_wis_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (wis)/HSlider wis" to="." method="_on_h_slider_wis_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (con)/Value con" to="." method="_on_value_con_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer (con)/HSlider con" to="." method="_on_h_slider_con_value_changed"]
